:tada: Updated filename

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <script src="./config.js"></script>
-        <script src="./ConvexHull.js"></script>
+        <script src="./convexHull.js"></script>
         <script src="./point.js"></script>
         <script src="./genesisPoint.js"></script>
         <script src="./fenceManager.js"></script>
