--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     </head>
     <body>
         <script src="./config.js"></script>
+        <script src="./enemy.js"></script>
         <script src="./convexHull.js"></script>
         <script src="./point.js"></script>
         <script src="./genesisPoint.js"></script>
